// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TargetDetails/Standards Multiple Standards 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <strong>
      S-3a
    </strong>
     
    <span>
      Mock standard
      <br />
    </span>
    <style
      jsx={true}
    >
      
          div {
            margin-top: 1em;
          }
        
    </style>
  </div>
  <div>
    <strong>
      S-3b
    </strong>
     
    <span>
      Mock standard
      <br />
    </span>
    <style
      jsx={true}
    >
      
          div {
            margin-top: 1em;
          }
        
    </style>
  </div>
  <div>
    <strong>
      S-3c
    </strong>
     
    <span>
      Mock standard
      <br />
    </span>
    <style
      jsx={true}
    >
      
          div {
            margin-top: 1em;
          }
        
    </style>
  </div>
</div>
`;

exports[`Storyshots TargetDetails/Standards One Standard 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <strong>
      S-3a
    </strong>
     
    <span>
      Mock standard
      <br />
    </span>
    <style
      jsx={true}
    >
      
          div {
            margin-top: 1em;
          }
        
    </style>
  </div>
</div>
`;
